images/build added to .giignore

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<header>
 		<nav class="container">		
 			<div class="row">
-				<img src="//placehold.it/150x30" alt="">
+				<img src="http://via.placeholder.com/150x30" alt="">
 				<ul>	
 					<li><a href="#">Home</a></li>
 					<li><a href="#">Pages</a></li>
